<resources>
    <string name="app_name">키핏</string>

    <!-- TAB MENU -->
    <string name="title_home">홈</string>
    <string name="title_health">분석</string>
    <string name="title_map">지도</string>
    <string name="title_calender">달력</string>
    <string name="title_news">뉴스레터</string>
    <string name="title_mypage">마이페이지</string>
    <string name="text_signup">회원가입</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="login2">로그인하기</string>
    <string name="signup">회원가입하기</string>
    <string name="welcome">%s님,\n현재 회원님의 스코어에요!</string>
    <string name="register">등록하기</string>
    <string name="skip">넘어가기</string>

    <!-- LOGIN -->
    <string name="login_welcome">반가워요👋</string>
    <string name="login_welcome_description">키핏에 오신걸 환영해요!</string>
    <string name="login_and_signup">회원가입 / 로그인</string>
    <string name="login_later">먼저 둘러볼게요!</string>
    <string name="login_term0">회원가입 시 이용약관 및</string>
    <string name="login_term1">개인정보 수집 및 이용 동의로 간주됩니다.</string>


    <!-- TAB HOME -->
    <string name="title_check_food">음식체크</string>
    <string name="title_newsletter">뉴스레터</string>
    <string name="text_hows_day">오늘 하루는 어땠나요?</string>
    <string name="comment_diary">한줄 일기로 감정을 공유해 보세요</string>
    <string name="comment_diet">오늘의 식단을 입력해 보세요</string>
    <string name="text_goal">이번 주 목표</string>
    <string name="text_eat">%d 섭취하기</string>
    <string name="text_baby0">엄마 조금만 기다려주세요\n곧 만나러 가요!</string>
    <string name="rest_date">%02d주 %02d일 남았어요!</string>
    <string name="text_measure_day">%02d주 %02d일 남았어요!</string>
    <string name="title_check_throes">나의 진통주기를 체크해 볼까요?</string>
    <string name="text_health_check">health check</string>
    <string name="text_mon">월</string>
    <string name="text_tue">화</string>
    <string name="text_wed">수</string>
    <string name="text_thu">목</string>
    <string name="text_fri">금</string>
    <string name="text_sat">토</string>
    <string name="text_sun">일</string>
    <string name="text_today_analysis">오늘의 영양분석</string>
    <string name="text_today_analysis_desc">희재님의 데이터로 필요한 영양소를 분석해요!</string>
    <string name="text_expert_solution">전문가의 솔루션</string>
    <string name="text_expert_solution_example">지방 섭취가 유난히 낮아요. 달걀,구운 고등어, 구운 연어를 드시는 것을 추천드려요!</string>
    <string name="text_newspaper">함께 보면 좋은 뉴스레터</string>

    <!-- TAB NEWS_LETTER -->
    <string name="desc_news">매일매일 새로운 소식을 확인해보세요</string>
    <string name="theme_0">Weekly Special 소식</string>
    <string name="theme_1">초보 임산부를 위한 튜토리얼</string>
    <string name="theme_2">건강/증상 관련 소식</string>

    <string name="category_all">전체</string>
    <string name="category_beginner">초보 임산부</string>
    <string name="category_early">초기</string>
    <string name="category_mid">중기</string>
    <string name="category_late">말기</string>

    <!-- QUIZ -->
    <string name="button_quiz">퀴즈 풀기</string>
    <string name="error_answer_none">정답을 선택해주세요</string>
    <string name="correct">정답입니다</string>
    <string name="incorrect">아쉽지만 정답이 아니에요!</string>


    <!-- TAB HEALTH -->
    <string name="title_health_total">종합</string>
    <string name="title_health_diet">식단 기록</string>
    <string name="title_health_hospital">병원 연계(TBD)</string>
    <string name="text_solution">맘그라운드 솔루션</string>
    <string name="text_solution_context_temp">이번 주는 단백질 섭취가 부족해요!\n달걀, 생선, 고기 등의 음식을 매끼 섭취해야합니다.</string>
    <string name="not_ready">서비스를 준비하고 있어요</string>
    <string name="photo_not_yet">아직 등록된 사진이 없어요!</string>
    <string name="photo_not_yet_desc">건강 분석을 위해 사진을 등록해주세요!</string>
    <string name="goto_photo">사진 등록하기</string>

    <string name="title_today">오늘 음식 분석이에요!</string>
    <string name="title_last">지난 음식 분석이에요!</string>
    <string name="text_date">%02월 d%02d일 %s</string>
    <string name="label_today">today</string>
    
    <!-- DIET UPLOAD -->
    <string name="upload_title">오늘 어떤 음식을 먹었나요?</string>
    <string name="upload_desc">먹은 음식 사진을 업로드하면 맘그라운드가 분석해요!</string>
    <string name="upload_yet">업로드 된 사진이 없어요</string>
    <string name="text_image_photo">이미지 사진</string>
    <string name="text_select_meal">*식사 종류를 선택해 주세요</string>
    <string name="text_select_menu">메뉴를 적어 주세요</string>
    <string name="free_option">선택사항</string>
    <string name="upload">등록하기</string>
    <string name="text_breakfast">아침</string>
    <string name="text_lunch">점심</string>
    <string name="text_dinner">저녁</string>

    <!-- MAP -->
    <string name="phone_call"></string>
    <string name="sample_number">010-2205-3705</string>

    <!-- MYPAGE -->
    <string name="login">로그인</string>
    <string name="profile">프로필</string>
    <string name="confirmation">확인하기</string>
    <string name="setting_status">상태 설정</string>
    <string name="setting_feedback">신고/피드백</string>
    <string name="setting_ask">문의</string>
    <string name="uses_hand">손 사용</string>

    <string name="level_easy">쉬움</string>
    <string name="level_normal">보통</string>
    <string name="level_high">높음</string>

    <string name="logout">로그아웃</string>

    <!-- SAMPLE -->
    <string name="sample">samplesamplesample</string>
    <string name="move">이동하기</string>

    <string name="google_login_client_id">AIzaSyB-7VZxA0XjcnBqVOt8pcaWRajj6_DvY-Q</string>
    <string name="desc0">"임신 중 약 복용은 정말 주의 해야해요!\n
배란기 후에는 약을 함부로 먹으면 안돼요. 수정 후 세포 분열이 되는 단계에서 경구 피임약, 항생제, 감기약, 신경안정제 특히 수면제 등의 약물에 노출이 되면 염색체의 이상을 초래하여, 태아가 자연유산 되거나 태내 기형 가능성이 있기 때문이에요. 임신의 기다림 여부를 떠나 가임기 여성이라면 예기치 못한 임신에 대비하기 위해서라도 배란기 후에는 약을 함부로 먹지 않는 것이 좋아요.\n
대개 임신 사실을 알기까지는 적어도 4주 이상의 시간이 걸려요. 그렇기 때문에 임신 사실을 알기 전에 복용했던 약이나 평상시처럼 했던 행동이, 태아에게 어떤 영향을 주지나 않을까 전전긍긍하는 경우가 있는데요. 임신 전에 복용한 약물이 임신에 영향을 미치면 의학적으로는 all or none이라는 개념으로 생각을 하게 됩니다. 즉, 약물로 인해 아기가 잘못되었으면 유산이 되었을 것이고 그렇지 않다면 아기한테 아무 문제가 없을 것으로 생각할 수 있어요.\n
대개 임신 초기의 약물은 수정 후 약 2주, 즉 임신 4주까지는 태아와 모체와의 소통이 이루어지지 않으므로, 특별한 영향은 없어요.\n
혹시 약물로 인해 아기가 잘못된다면 유산의 형태로 나타나며 기형의 가능성은 극히 적습니다. 그러나 수정 후 3주~9주까지의 기간은 태아의 기관이 형성되는 시기이기 때문에 이 시기의 약물복용은 태아에게 여러 가지 기형을 유발할 수 있어요.\n
또한, 정상적인 부부 사이에서도 기형 발생률은 3~4%로 보고되고 있으므로, 약물복용으로 인해 의심되는 것이 있다면 산부인과 의사와 반드시 상담을 통해 주치의 권고에 따르는 것이 좋아요. 만약 임신된 사실을 알기 이전에 약물을 복용한 경우, 침착하게 대처하는 것이 중요합니다."</string>

</resources>