<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_health"
        android:icon="@drawable/ic_map"
        android:title="@string/title_health" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_calender"
        android:icon="@drawable/ic_heart"
        android:title="@string/title_calender" />

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/ic_person"
        android:title="@string/title_mypage" />

</menu>