<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.momground.android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.momground.android.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_health"
        android:name="com.momground.android.ui.health.HealthFragment"
        android:label="@string/title_health"
        tools:layout="@layout/fragment_health" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.momground.android.ui.map.Map2Fragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map2" />

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.momground.android.ui.mypage.MyPageFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/fragment_mypage" />

</navigation>