<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginTop="100dp">

        <TextView
            style="@style/fontStyleBold"
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome"
            android:textSize="30dp"
            android:textColor="@color/default_black"/>
        <TextView
            android:id="@+id/welcome_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome_description"
            android:textSize="@dimen/default_text_headline1"
            android:textColor="@color/default_black"
            style="@style/fontStyleBold"
            app:layout_constraintTop_toBottomOf="@+id/welcome_title"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height"
            android:hint="@string/email"
            android:background="@drawable/bg_edit"
            android:layout_marginTop="100dp"
            android:paddingLeft="8dp"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height"
            android:hint="@string/password"
            android:background="@drawable/bg_edit"
            android:layout_marginTop="10dp"
            android:paddingLeft="8dp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_48">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bg_google_login2"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_loggin"
            android:gravity="center_vertical">

            <TextView
                style="@style/fontStyleNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/login2"
                android:textColor="@color/white"
                android:textSize="@dimen/default_text_tiny" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_gray_outline"
            android:gravity="center_vertical">

            <TextView
                style="@style/fontStyleNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/text_signup"
                android:textColor="@color/default_black"
                android:textSize="@dimen/default_text_tiny" />
        </RelativeLayout>

        <TextView
            style="@style/fontStyleNormal"
            android:id="@+id/button_login_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_later"
            android:layout_marginTop="@dimen/default_margin"
            android:paddingBottom="@dimen/default_margin"
            android:textSize="@dimen/default_text_tiny"
            android:textColor="@color/gray"
            android:layout_gravity="center_horizontal"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>