<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="true"
    app:behavior_draggable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black20">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/layout_margin_default"
            android:background="@drawable/bg_white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/close"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/fontStyleBold"
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="오늘 어떤 음식을 먹었나요?"
                    android:textColor="@color/default_black"
                    android:textSize="@dimen/default_text_headline1"
                    android:layout_marginTop="8dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="먹은 음식 사진을 업로드하면 맘그라운드가 분석해요!"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/upload"
                        android:layout_width="wrap_content"
                        android:layout_height="240dp"
                        android:src="@drawable/img_photo_upload"
                        android:layout_centerInParent="true"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/upload_image"
                        android:layout_width="wrap_content"
                        android:layout_height="240dp"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_select_meal"/>
                <Spinner
                    android:id="@+id/spinner_meal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_button_height"
                    android:autofillHints="선택하기"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_select_menu"
                    android:layout_marginTop="@dimen/layout_margin_default" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_meal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_button_height"
                    android:hint="@string/free_option"/>

            </androidx.appcompat.widget.LinearLayoutCompat>



            <RelativeLayout
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_button_height"
                android:background="@drawable/btn_orange"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintBottom_toBottomOf="parent">
                <TextView
                    style="@style/fontStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"/>
            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>