<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/fontStyleBold"
            android:id="@+id/title_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_today"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="@dimen/default_layout_margin"
            android:layout_marginTop="@dimen/default_layout_margin"/>

        <RelativeLayout
            android:id="@+id/layout_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title_today"
            android:layout_marginTop="@dimen/default_inner_margin"
            android:layout_marginLeft="@dimen/default_layout_margin"
            android:layout_marginRight="@dimen/default_layout_margin">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/item_none0"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bg_background"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    style="@style/fontStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo_not_yet"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/default_text_small"/>


                <TextView
                    style="@style/fontStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo_not_yet_desc"
                    android:textColor="@color/gray700"
                    android:textSize="@dimen/default_text_tiny"
                    android:layout_marginTop="4dp"/>

                <RelativeLayout
                    android:id="@+id/button_upload_photo"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/default_layout_margin"
                    android:background="@drawable/btn_accent">

                    <TextView
                        style="@style/fontStyleNormal"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/goto_photo"
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_text_small"/>
                </RelativeLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>

        <TextView
            style="@style/fontStyleBold"
            android:id="@+id/title_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_last"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_today"
            android:layout_marginLeft="@dimen/default_layout_margin"
            android:layout_marginTop="@dimen/default_layout_margin"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title_last"
            android:layout_marginTop="@dimen/default_layout_margin"
            android:layout_marginLeft="@dimen/default_layout_margin"
            android:layout_marginRight="@dimen/default_layout_margin">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/item_none1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bg_background"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    style="@style/fontStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo_not_yet"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/default_text_small"/>

                <TextView
                    style="@style/fontStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo_not_yet_desc"
                    android:textColor="@color/gray700"
                    android:textSize="@dimen/default_text_tiny"
                    android:layout_marginTop="4dp"/>

                <RelativeLayout
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/default_layout_margin"
                    android:background="@drawable/btn_accent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_last"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/button_upload_photo1"
                        style="@style/fontStyleNormal"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/goto_photo"
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_text_small"/>
                </RelativeLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>